--- a/test/server-to-peer/case-study2/index.html
+++ b/test/server-to-peer/case-study2/index.html
@@ -211,7 +211,7 @@
 
    document.getElementById('start-smart-data').onclick = function(){
         
-        let selectedPeer = document.getElementById('peers').value
+        //let selectedPeer = document.getElementById('peers').value
         // get delivery priorities values
         let resolution = document.getElementById('resolution').value
         let frequency = document.getElementById('frequency').value
